--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>hello html</title>
+	<title>This is test project</title>
 </head>
 <body>
-	<p>hello html</p>
+	<p>This is test project.
+	Edited by me. </p>
 </body>
 </html>
